# ocio-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: pipeline.rs
docs/: DEVELOPMENT.md  README_zh-CN.md
examples/: basic.rs
ocio-sys/: Cargo.toml  build.rs
ocio-sys/src/: bridge.cpp  bridge.hpp  lib.rs
src/: baker.rs  builtin_config_registry.rs  color_space_set.rs  colorspace.rs  config.rs  context.rs  file_rules.rs  format_metadata.rs  grading.rs  lib.rs  look.rs  named_transform.rs  processor.rs  types.rs  view_transform.rs
src/transform/: allocation.rs  builtin.rs  cdl.rs  color_space.rs  display_view.rs  exponent.rs  exponent_with_linear.rs  exposure_contrast.rs  file.rs  fixed_function.rs  grading_hue_curve.rs  grading_primary.rs  grading_rgb_curve.rs  grading_tone.rs  group.rs  log.rs  log_affine.rs  log_camera.rs  look_transform.rs  lut1d.rs  lut3d.rs  matrix.rs  mod.rs  range.rs
tests/: matrix_op_tests.rs
tests/common/: mod.rs
tests/data/clf/: matrix_windows.clf
tools/: migrate_src.rs
tools/generator/: Cargo.toml  old_names.txt
tools/generator/src/: main.rs
