[package]
name = "ocio-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ocio-sys = { path = "ocio-sys" }
thiserror = "1.0"

[features]
default = []
bundled = ["ocio-sys/bundled"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pipeline"
harness = false

[workspace]
members = ["ocio-sys"]
