[package]
name = "ocio-rs"
version = "0.1.0"
edition = "2021"
authors = ["shaloong <contact@shaloong.com>"]
description = "Safe Rust bindings for OpenColorIO v2.5.1"
license = "BSD-3-Clause"
repository = "https://github.com/shaloong/ocio-rs"
keywords = ["opencolorio", "color", "ocio", "vfx", "imaging"]
categories = ["multimedia", "api-bindings"]
readme = "README.md"
exclude = ["tests/data/*", "tests/data/**/*", "third_party/*", "third_party/**/*"]

[dependencies]
ocio-sys = { version = "0.1.0", path = "ocio-sys" }
thiserror = "1.0"

[features]
default = []
bundled = ["ocio-sys/bundled"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pipeline"
harness = false

[workspace]
members = ["ocio-sys"]
